[package]
name = "dbproj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.2"
rand = {version = "0.8.4", features =["std","std_rng"]}
actix-web = "3"
serde = "1"
serde_json = "1"
futures = "0.3.19"
lazy_static = "1.4.0"
tera = "1"
actix-session = "0.4.1"